newtype-tools/tests/newtype-fail/newtype-list.stderr
error: expected identifier
 --> tests/newtype-fail/newtype-list.rs:2:11
  |
2 | #[newtype(;)]
  |           ^
